--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" type="text/css" href="public/styling/App.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Calendar.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/fullcalendar.min.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/fullcalendar.print.min.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Main.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Profile.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/welcome.css" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWoVmxaEJ5Elh86Jyd0Jd5pQhWj-VFi_A&libraries=places"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-      
+
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--  Adding Bootstrap 4 cdn -->
+    <script src="public/bundle.js" ></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <title>Shift Swap</title>
   </head>
@@ -28,7 +36,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">React Broken</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
