added user information to shema and return to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" type="text/css" href="public/styling/App.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/NavBar.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Login-Signup.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Main.css" />
     <link rel="stylesheet" type="text/css" href="public/styling/Calendar.css" />
+    <link rel="stylesheet" type="text/css" href="public/styling/Profile.css" />
     <link rel="stylesheet" type="text/css" href="public/styling/fullcalendar.min.css" />
     <link rel="stylesheet" type="text/css" href="public/styling/fullcalendar.print.min.css" />
-    <link rel="stylesheet" type="text/css" href="public/styling/Main.css" />
-    <link rel="stylesheet" type="text/css" href="public/styling/Profile.css" />
-    <link rel="stylesheet" type="text/css" href="public/styling/welcome.css" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWoVmxaEJ5Elh86Jyd0Jd5pQhWj-VFi_A&libraries=places"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
